<resources>
    <string name="app_name">Recipes Finder</string>
    <string name="Find">Найти!</string>
    <string name="Help">Помощь</string>
    <string name="Settings">Настройки</string>
    <string name="AddIngr">Добавить ингредиент</string>
    <string name="AddRec">Все рецепты</string>
    <string name="MainMsg">Пожалуйста, добавьте ингредиент, чтобы найти возможный рецепт или выберите рецепт из списка.</string>
    <string name="first">first</string>
    <string name="Menu">Меню</string>
    <string name="ChangeBolt">Поменять шрифт</string>
    <string name="ChangeBackGr">Поменять фон</string>
    <string name="ChangeTheme">Поменять тему</string>
    <string name="thanks">Создано с помощью: https://finecooking.ru/</string>
    <string name="add_recipe">Добавить рецепт</string>
    <string name="instructions">Заполните все поля</string>
    <string name="SaveRecipe">Сохранить</string>
    <string name="addingr">+</string>
    <string name="NameRecipe">Введите название рецепта</string>
    <string name="NameIngredient">Введите название ингредиента</string>
    <string name="NameStep">Введите текст шага</string>
    <string name="DeleteIngredient">X</string>
    <string name="CategoryName">Введите категорию (Десерт, Салат и т.д.)</string>
    <string name="ToListOfIngr">К списку ингредиентов</string>
    <string name="DeleteIngr">Удалить</string>
    <string name="Cancel">Отмена</string>
    <string name="Categories">Категории</string>
    <string-array name="categories">
        <item>Все категории</item>
        <item>Первые блюда</item>
        <item>Вторые блюда</item>
        <item>Закуски</item>
        <item>Салаты</item>
        <item>Десерты</item>
        <item>Выпечка</item>
        <item>Торты</item>
        <item>Блюда в мультиварке</item>
        <item>Блины и оладьи</item>
    </string-array>
    <string name="Hint">Нажмите на ингредиент и удерживайте для его удаления</string>
    <string name="instruction">Инструкция по использованию\n\n Чтобы выбрать рецепты по нужным ингредиентам, нажмите кнопку "Добавить ингредиент". После вы можете выбрать ингредиенты, либо забив в строку, либо найдя по алфавиту.\n\n

В данном списке ингредиентов вы можете удалить их, зажав нужный ингредиент.\n\n

Далее, нажав кнопку "Найти", вам отобразится список наиболее подходящих рецептов. Они будут расставлены по приоритету.\n\n

Выбрав понравившийся рецепт, вы можете нажать на звездочку справа, тогда данный рецепт добавится в "Избранное".\n\n

Чтобы добавить свой рецепт, нажмите на кнопку "Мои рецепты". После добавления своего рецепта, вы можете просматривать его во вкладке "Мои рецепты", а также удалить его, открыв сам рецепт и нажав на значок с мусорным ведром.\n\n

Приятного аппетита!\n\n

Источники, которые помогали в разработке:\n
https://finecooking.ru/recipes\n
https://icons8.ru/app\n
        https://play.google.com/store/apps/details?id=com.irisstudio.logomaker"</string>
</resources>