<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRecipe">

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/NameRecipe"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/NameRecipe"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <Spinner
                android:id="@+id/CategoryName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/CategoryName"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <LinearLayout
                android:id="@+id/Ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/addingredient"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/addingr"
                app:layout_constraintBottom_toTopOf="@id/Ingredients"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <LinearLayout
                android:id="@+id/Steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:id="@+id/addstep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/addingr"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <Button
                android:id="@+id/SaveBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SaveRecipe"
                android:layout_gravity="center_horizontal|center_vertical"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
